# Glass

./: .gitignore  CMakeLists.txt  Doppler.sln  README.md
Doppler/: Camera.cpp  Camera.h  ComponentManager.h  Doppler.cpp  Doppler.h  Doppler.vcxproj  Doppler.vcxproj.filters  EntityManager.cpp  EntityManager.h  Globals.cpp  Globals.h  IComponent.h  Logging.h  Mesh.h  MeshLoader.cpp  MeshLoader.h  Metadata.h  Renderer.cpp  Renderer.h  Shader.h  Texture.cpp  Texture.h  Transform.h  dllmain.cpp
Doppler/x64/Debug/: Doppler.dll.recipe  Doppler.ilk  doppler.obj.enc  meshloader.obj.enc  renderer.obj.enc  vc143.idb
MakeDopPkg/: makedop.py
MakeDopPkg/in/: data_box.xml  data_box.xml.bak
TestWindow/: TestWindow.cpp  TestWindow.vcxproj  TestWindow.vcxproj.filters
data/: gpkconvert.py  naughts.py
doc/html/: _camera_8cpp.html  _camera_8cpp_source.html  _camera_8h.html  _camera_8h.js  _camera_8h_source.html  _component_manager_8h.html  _component_manager_8h.js  _component_manager_8h_source.html  _entity_manager_8cc.html  _entity_manager_8cc_source.html  _entity_manager_8h.html  _entity_manager_8h.js  _entity_manager_8h_source.html  _glass_8cc.html  _glass_8cc.js  _glass_8cc_source.html  _glass_8h.html  _glass_8h.js  _glass_8h_source.html  _i_component_8h.html  _i_component_8h.js  _i_component_8h_source.html  _logging_8h.html  _logging_8h.js  _logging_8h_source.html  _mesh_8h.html  _mesh_8h.js  _mesh_8h_source.html  _mesh_loader_8cc.html  _mesh_loader_8cc.js  _mesh_loader_8cc_source.html  _mesh_loader_8h.html  _mesh_loader_8h.js  _mesh_loader_8h_source.html  _render_system_8cc.html  _render_system_8cc.js  _render_system_8cc_source.html  _render_system_8h.html  _render_system_8h.js  _render_system_8h_source.html  (+108 more)
doc/latex/: _camera_8cpp.tex  _camera_8cpp_source.tex  _camera_8h.tex  _camera_8h_source.tex  _component_manager_8h.tex  _component_manager_8h_source.tex  _entity_manager_8cc.tex  _entity_manager_8cc_source.tex  _entity_manager_8h.tex  _entity_manager_8h_source.tex  _glass_8cc.tex  _glass_8cc_source.tex  _glass_8h.tex  _glass_8h_source.tex  _i_component_8h.tex  _i_component_8h_source.tex  _logging_8h.tex  _logging_8h_source.tex  _mesh_8h.tex  _mesh_8h_source.tex  _mesh_loader_8cc.tex  _mesh_loader_8cc_source.tex  _mesh_loader_8h.tex  _mesh_loader_8h_source.tex  _render_system_8cc.tex  _render_system_8cc_source.tex  _render_system_8h.tex  _render_system_8h_source.tex  _result_8h.tex  _result_8h_source.tex  _shader_8h.tex  _shader_8h_source.tex  _texture_8h.tex  _texture_8h_source.tex  _texture_loader_8cc.tex  _texture_loader_8cc_source.tex  _texture_loader_8h.tex  _texture_loader_8h_source.tex  _transform_8h.tex  _transform_8h_source.tex  (+40 more)
include/: uuid_v4.h
include/glad/: glad.h
include/tinygltf/: tiny_gltf.h
include/uuid/: uuid_v4.h
lib/Base/: Glass.cc  Glass.h  Logging.h  LuaDriver.cc  LuaDriver.h  Reflectable.h  Result.h  Utils.h  Window.cc  Window.h
lib/Components/: Camera.cpp  Camera.h  IComponent.h  Mesh.cc  Mesh.h  Shader.cc  Shader.h  Texture.cc  Texture.h  Transform.cc  Transform.h
lib/Debug/: Logging.cc  Logging.h
lib/Filesystem/: Vfs.cc  Vfs.h
lib/GUI/: GuiHandler.cc  GuiHandler.h
lib/Loaders/: MeshLoader.cc  MeshLoader.h  ShaderLoader.cc  ShaderLoader.h  TextureLoader.cc  TextureLoader.h
lib/Managers/: ComponentManager.h  EntityManager.cc  EntityManager.h
lib/Rendering/: RenderSystem.cc  RenderSystem.h  Shader.h
tests/: main.cc
x64/Debug/: Doppler.exp  Doppler.lib  TestWindow.exp  TestWindow.lib
x64/Release/: Doppler.exp  Doppler.lib  TestWindow.exp  TestWindow.lib  doccap.cap  imgui.ini
(+100 files in other folders)
